# kevinarpe-kumquat-qt5

./: .gitignore  CMakeLists.txt  README.txt  main.cpp  make_includes.bash
backward-cpp/: backward.hpp
backward-cpp/test/: _test_main.cpp
include/: KAbstractDataMatrix  KAbstractDataTable  KAbstractForwardingDataTable  KAbstractModelFilter  KAbstractTableHeader  KAutoNumberedTableHeader  KColumnCount  KDataTable  KDataTableDataFunctor  KDataTableDimensionCompareFunctor  KDataTableDimensionRegexFilterFunctor  KFixedSizeMap  KHiliteSegment  KHiliteSegmentGroup  KIDataMatrix  KIDataTable  KIModelFilter  KITableHeader  KMatrixIndex  KProxyDataTable  KQAbstractItemModel  KQProxyStyle  KQSortFilterProxyModel  KQStringMatcherByQRegExp  KQStyleOptionViewItem  KQStyledItemDelegate  KQTableModel  KRegexModelFilter  KRowDataMatrix  KRowVectorDataMatrix  KRowVectorDataTable  KSortFilterProxyDataTable  KSparseDataMatrix  KStringMatch  KVectorTableHeader  kalgorithm  kfunctional  kglobal  knamespace  kstdlib
src/: CMakeLists.txt  TODO.txt  kabstractdatamatrix.h  kabstractdatatable.h  kabstractforwardingdatatable.h  kabstractforwardingdatatable.impl.h  kabstractmodelfilter.h  kabstracttableheader.h  kalgorithm.h  kautonumberedtableheader.h  kautonumberedtableheader.impl.h  kcolumncount.cpp  kcolumncount.h  kdatatable.h  kdatatable.impl.h  kdatatabledatafunctor.h  kdatatabledimensioncomparefunctor.h  kdatatabledimensioncomparefunctor.impl.h  kdatatabledimensionregexfilterfunctor.h  kdatatabledimensionregexfilterfunctor.impl.h  kfixedsizemap.h  kfunctional.h  kglobal.h  khilitesegment.cpp  khilitesegment.h  khilitesegmentgroup.cpp  khilitesegmentgroup.h  kidatamatrix.h  kidatatable.h  kimodelfilter.h  kitableheader.h  kmatrixindex.cpp  kmatrixindex.h  knamespace.cpp  knamespace.h  kproxydatatable.h  kproxydatatable.impl.h  kqabstractitemmodel.h  kqproxystyle.cpp  kqproxystyle.h  (+31 more)
